--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-.home {
+/* .home {
   height: 100vh;
   align-items: center;
   justify-content: center;
-}
+} */
